--- a/src/main/resources/fxml/InsertView.fxml
+++ b/src/main/resources/fxml/InsertView.fxml
@@ -4,81 +4,73 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="209.0" prefWidth="663.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="hse.dm_lab.controller.InsertController">
+<?import javafx.scene.text.*?>
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="204.0" prefWidth="367.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hse.dm_lab.controller.InsertController">
   <children>
-    <GridPane prefHeight="209.0" prefWidth="663.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <GridPane layoutX="81.0" prefHeight="209.0" prefWidth="374.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="81.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="0.0">
       <children>
-        <TextField fx:id="fioTextField" alignment="CENTER" opacity="0.82" prefWidth="89.0" promptText="ФИО" text="" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER">
+        <TextField fx:id="nameTextField" maxWidth="-Infinity" opacity="0.82" prefWidth="200.0" promptText="name" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
           <effect>
             <Lighting>
               <bumpInput>
                 <Shadow />
               </bumpInput>
               <light>
-                <javafx.scene.effect.Light.Distant color="#ff99e2" />
+                <javafx.scene.effect.Light.Distant color="#ffffff" />
               </light>
             </Lighting>
           </effect>
         </TextField>
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Пол" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="1">
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="recipe" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP">
           <font>
             <Font size="14.0" fx:id="x1" />
           </font>
           <GridPane.margin>
-            <Insets left="55.0" top="-40.0" />
+            <Insets />
           </GridPane.margin>
         </Text>
-        <TextField fx:id="roleTextField" maxWidth="-Infinity" prefWidth="200.0" promptText="Роль" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+        <TextField fx:id="priceTextField" maxWidth="-Infinity" prefWidth="200.0" promptText="price" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
           <effect>
             <Lighting>
               <bumpInput>
                 <Shadow />
               </bumpInput>
               <light>
-                <javafx.scene.effect.Light.Distant color="#99ffda" />
+                <javafx.scene.effect.Light.Distant color="#ffffff" />
               </light>
             </Lighting>
           </effect>
         </TextField>
-        <TextField fx:id="claimCountTextField" maxWidth="-Infinity" prefWidth="149.0" promptText="Количество заявок" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-          <effect>
-            <Lighting>
-              <bumpInput>
-                <Shadow />
-              </bumpInput>
-              <light>
-                <javafx.scene.effect.Light.Distant color="#00ff66" />
-              </light>
-            </Lighting>
-          </effect>
-        </TextField>
-        <RadioButton fx:id="maleRadioButton" font="$x1" mnemonicParsing="false" text="Мужской" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="1">
+        <RadioButton fx:id="yesButton" font="$x1" mnemonicParsing="false" text="yes" textAlignment="CENTER" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
           <GridPane.margin>
             <Insets left="15.0" />
           </GridPane.margin>
         </RadioButton>
-        <RadioButton fx:id="femaleRadioButton" font="$x1" mnemonicParsing="false" text="Женский" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="1">
+        <RadioButton fx:id="noButton" font="$x1" mnemonicParsing="false" text="no" textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
           <GridPane.margin>
             <Insets left="15.0" top="50.0" />
           </GridPane.margin>
         </RadioButton>
-        <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitInsert" text="Добавить запись" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+        <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitInsert" text="Add" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
           <font>
             <Font size="15.0" />
           </font>
         </Button>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add new drag" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
       </children>
       <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="10.0" prefWidth="152.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="348.0" minWidth="10.0" prefWidth="348.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="221.0" minWidth="10.0" prefWidth="163.0" />
       </columnConstraints>
       <rowConstraints>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
   </children>
